# drv-compiler

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.cpp
compiler/src/: analyzer.cpp  analyzer.h  ast.h  codegen.cpp  codegen.h  compiler.cpp  compiler.h  incremental.cpp  incremental.h  lexer.cpp  lexer.h  parser.cpp  parser.h  token.h
docs/en/: CONTRIBUTING.md  ROADMAP.md  SECURITY.md
docs/en/education/: 01_introduction.md  02_basics.md  03_operators.md  04_control_flow.md  05_collections.md  06_functions_classes.md  07_traits.md  08_error_handling.md  09_functional.md  10_memory_model.md  11_parallelism.md  12_simd_hpc.md  13_annotations.md  14_builtins.md  15_extensions.md  16_advanced.md  17_external_libraries.md
docs/en/example/: 01_matmul_simd.md  02_nbody_gravity.md  03_ownership_arena.md  04_generics_traits.md  05_functional_pipeline.md  06_async_parallel_io.md  07_compile_time_meta.md  08_compiler_reordering.md  09_hardware_roofline.md
docs/ja/: CONTRIBUTING.md  ROADMAP.md  SECURITY.md
docs/ja/education/: 01_introduction.md  02_basics.md  03_operators.md  04_control_flow.md  05_collections.md  06_functions_classes.md  07_traits.md  08_error_handling.md  09_functional.md  10_memory_model.md  11_parallelism.md  12_simd_hpc.md  13_annotations.md  14_builtins.md  15_extensions.md  16_advanced.md  17_external_libraries.md
docs/ja/example/: 01_matmul_simd.md  02_nbody_gravity.md  03_ownership_arena.md  04_generics_traits.md  05_functional_pipeline.md  06_async_parallel_io.md  07_compile_time_meta.md  08_compiler_reordering.md  09_hardware_roofline.md
docs/ko/: CONTRIBUTING.md  ROADMAP.md  SECURITY.md
docs/ko/education/: 01_소개.md  02_기본.md  03_연산자.md  04_제어문.md  05_컬렉션.md  06_함수와 클래스.md  07_트레이트.md  08_예외처리.md  09_함수형프로그래밍.md  10_메모리모델.md  11_병렬처리.md  12_SIMD와고성능컴퓨팅.md  13_어노테이션.md  14_내장함수.md  15_확장함수.md  16_고급기능.md  17_외부라이브러리.md
docs/ko/example/: 01_행렬곱셈_SIMD.md  02_N체_중력시뮬레이션.md  03_소유권_아레나_할당자.md  04_제네릭_트레이트_바운드.md  05_함수형_파이프라인.md  06_async_병렬_파일처리.md  07_컴파일타임_메타프로그래밍.md  08_컴파일러_재배치_최적화.md  09_하드웨어_최대성능_루프라인.md  example01.dri  example01.drv  example02.dri  example03.dri  example04.dri  example05.dri  example06.dri  example07.dri  example08.dri  example09.dri
installer/: build-installer.bat  install.ps1  sign.ps1
installer/linux/: dri  install.sh
installer/mac/: build-installer.sh  dri
installer/window/: build-installer.bat  install.ps1  launcher.cs  sign.ps1
tests/: run_tests.sh
tests/cases/: 01_hello.dri  02_arithmetic.dri  03_control_flow.dri  04_lists.dri  05_functions.dri  06_classes.dri  07_strings.dri  08_exceptions.dri  09_lambdas.dri  10_memory.dri  11_safety.dri  12_strict_mode.dri  13_intrinsics.dri  14_build_manifest.dri
vscode/: language-configuration.json  package-lock.json  package.json
vscode/snippets/: dri.json
vscode/src/: extension.js
vscode/syntaxes/: dri.tmLanguage.json
